<resources>
    <string name="app_name">ASAEDR</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_new">Add</string>

    <string name="base_url">http://app.allsportsacademy.in/MyService.svc</string>

    <string name="welcome_to_assa_app">All Sports Academy EDR v1.0</string>

    <string name="welcome_text">Before we begin, here is some important legal information regarding your use of this app. This will only take a minute!</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password length must between 6 to 20 character</string>
    <string name="error_invalid_current_password">Current password is wrong</string>
    <string name="error_invalid_mobile_number">This mobile number is invalid</string>
    <string name="error_field_required">This field is required</string>

    <string name="navdrawer_item_reporting">REPORTING</string>
    <string name="navdrawer_item_messages">MESSAGES</string>
    <string name="navdrawer_item_settings">CHANGE PASSWORD</string>
    <string name="navdrawer_item_logout">LOGOUT</string>
    <string name="navdrawer_item_contact_us">CONTACT US</string>
    <string name="navdrawer_item_reports">REPORTS</string>
    <string name="navdrawer_item_employees">EMPLOYEES</string>
    <string name="navdrawer_item_lock">LOCK DAYS</string>
    <string name="navdrawer_item_unlock">UNLOCK DAYS</string>

    <string name="employee_register_submitlink">Submit</string>

    <string name="select_dept">Select Department</string>
    <string name="select_zone">Select Zone</string>
    <string name="select_admin_role">Select Admin Role</string>

    <string name="retry">Retry</string>
    <string name="no_connection_cant_load">Check your network connection.</string>

    <string name="error_invalid_content">Content is invalid, Must be greater than 10 character</string>

    <string name="error_invalid_name">Name is invalid, Must be greater than 5 character</string>

</resources>
